# tap-jotform

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml
.github/: renovate.json5
.github/workflows/: build.yaml  dynamic-publish.yaml  test.yaml  test.yml
tap_jotform/: client.py  streams.py  tap.py
tests/: test_core.py
