[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-jotform"
description = "Singer tap for Jotform, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Jotform",
]
license = "Apache-2.0"
maintainers = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "colorama==0.4.*",
  "requests-cache==1.2.*",
  "singer-sdk==0.47.*",
  "structlog==25.4.*",
]

urls.Documentation = "https://github.com/edgarrmondragon/tap-jotform/#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-jotform"
urls.Repository = "https://github.com/edgarrmondragon/tap-jotform"
scripts.tap-jotform = "tap_jotform.tap:TapJotform.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
ci = [
  "pytest-github-actions-annotate-failures>=0.3",
]
testing = [
  "pytest==8.*",
  "singer-sdk[testing]==0.47.*",
]
typing = [
  "mypy>=1.11.1",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812",
  "DJ",
  "ISC001",
  "PD",
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = [
  "-vvv",
]
