[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-jotform"
description = "Singer tap for Jotform, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Jotform",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "colorama~=0.4.6",
  "requests-cache~=1.3.1",
  "singer-sdk~=0.54.0a5",
  "structlog~=25.5.0",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-jotform = "tap_jotform.tap:TapJotform.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-jotform/#readme"
Homepage = "https://github.com/reservoir-data/tap-jotform"
Repository = "https://github.com/reservoir-data/tap-jotform"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
ci = [
  "pytest-github-actions-annotate-failures>=0.3",
]
testing = [
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19",
  "ty>=0.0.23",
  "types-requests",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.ruff]
required-version = ">=0.15"
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812",
  "DJ",
  "ISC001",
  "PD",
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN",
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
